--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -4,12 +4,14 @@ on:
   schedule:
     - cron: '* * * * *' # Run every day at midnight UTC (https://crontab.guru/#0_0_*_*_*)
 
+  workflow_dispatch: # allows manual triggering of the workflow
+
 jobs:
   predict:
     runs-on: ubuntu-latest
     steps:
     - name: check out repository content
-    - uses: actions/checkout@v2
+      uses: actions/checkout@v2
 
     - name: Set up Python
       uses: actions/setup-python@v2
@@ -18,8 +20,8 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
+        python3 -m pip install --upgrade pip
         pip install -r requirements.txt
 
     - name: Execute py script
-      run: python batch_predict.py
+      run: python3 batch_predict.py
