--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -17,6 +17,10 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.9'
+        
+    - name: cuda-toolkit
+      uses: Jimver/cuda-toolkit@v0.2.8
+
 
     - name: Install dependencies
       run: |
