--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
     - name: check out repository content
       uses: actions/checkout@v2
+      with: 
+        lfs: true
 
     - name: Set up Python
       uses: actions/setup-python@v2
